// Generated by j5build v0.0.0-20250326003532-4b075335184f+dirty. DO NOT EDIT

syntax = "proto3";

package test.v1;

import "buf/validate/validate.proto";
import "j5/ext/v1/annotations.proto";
import "j5/state/v1/metadata.proto";

message GreetingKeys {
  option (j5.ext.v1.psm) = {
    entity_name: "greeting"
    entity_part: ENTITY_PART_KEYS
  };

  option (j5.ext.v1.message).object = {};

  string greeting_id = 1 [
    (buf.validate.field) = {
      required: true
      string: {
        uuid: true
      }
    },
    (j5.ext.v1.field).key = {},
    (j5.ext.v1.key).primary_key = true
  ];
}

message GreetingData {
  option (j5.ext.v1.psm) = {
    entity_name: "greeting"
    entity_part: ENTITY_PART_DATA
  };

  option (j5.ext.v1.message).object = {};

  string name = 1 [(j5.ext.v1.field).string = {}];

  optional string reply_message = 2 [(j5.ext.v1.field).string = {}];

  string app_version = 3 [(j5.ext.v1.field).string = {}];
}

message GreetingState {
  option (j5.ext.v1.psm) = {
    entity_name: "greeting"
    entity_part: ENTITY_PART_STATE
  };

  option (j5.ext.v1.message).object = {};

  j5.state.v1.StateMetadata metadata = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];

  GreetingKeys keys = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object.flatten = true
  ];

  GreetingData data = 3 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];

  GreetingStatus status = 4 [
    (buf.validate.field) = {
      required: true
      enum: {
        defined_only: true
      }
    },
    (j5.ext.v1.field).enum = {}
  ];
}

message GreetingEventType {
  option (j5.ext.v1.message).oneof = {};

  oneof type {
    Initiated initiated = 1 [(j5.ext.v1.field).object = {}];

    Replied replied = 2 [(j5.ext.v1.field).object = {}];
  }

  message Initiated {
    option (j5.ext.v1.message).object = {};

    string name = 1 [(j5.ext.v1.field).string = {}];

    string app_version = 2 [(j5.ext.v1.field).string = {}];

    TestError test_error = 3 [(j5.ext.v1.field).object = {}];

    TestError worker_error = 4 [(j5.ext.v1.field).object = {}];
  }

  message Replied {
    option (j5.ext.v1.message).object = {};

    string reply_message = 1 [(j5.ext.v1.field).string = {}];
  }
}

message GreetingEvent {
  option (j5.ext.v1.psm) = {
    entity_name: "greeting"
    entity_part: ENTITY_PART_EVENT
  };

  option (j5.ext.v1.message).object = {};

  j5.state.v1.EventMetadata metadata = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];

  GreetingKeys keys = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object.flatten = true
  ];

  GreetingEventType event = 3 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).oneof = {}
  ];
}

message TestError {
  option (j5.ext.v1.message).object = {};

  string message = 1 [(j5.ext.v1.field).string = {}];

  uint32 code = 2 [(j5.ext.v1.field).integer = {}];
}

enum GreetingStatus {
  GREETING_STATUS_UNSPECIFIED = 0;
  GREETING_STATUS_INITIATED = 1;
  GREETING_STATUS_REPLIED = 2;
}
